--- a/TASK4/1_pretraining.ipynb
+++ b/TASK4/1_pretraining.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reference code: JAK2 activity optimization with ReLeaSE algorithm"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Imports"
    ]
   },
@@ -20,17 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%env CUDA_VISIBLE_DEVICES=2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "%env CUDA_VISIBLE_DEVICES=0"
    ]
   },
   {
@@ -86,7 +69,7 @@
    "outputs": [],
    "source": [
     "from rebadd.stackVAE import StackAugmentedVAE\n",
-    "from rebadd.datautils import GeneratorData, normalize_SMILES"
+    "from rebadd.datautils import GeneratorData"
    ]
   },
   {
@@ -112,11 +95,11 @@
     "class DATACONFIGS:\n",
     "    def __init__(self):\n",
     "        ## input\n",
-    "        self.input_dir = os.path.join('processed_data', 'zinc15')\n",
+    "        self.input_dir = 'outputs_0_preprocess_data'\n",
     "        self.train_data_path = os.path.join(self.input_dir, 'fragments_list.pkl')\n",
     "        self.vocab_data_path = os.path.join(self.input_dir, 'vocabulary.csv')\n",
     "        ## output\n",
-    "        self.output_dir = os.path.join('outputs_1_pretraining_ReBADD', 'zinc15')\n",
+    "        self.output_dir = 'outputs_1_pretraining'\n",
     "        assert os.path.exists(self.output_dir)\n",
     "\n",
     "dataconfigs = DATACONFIGS()"
@@ -166,7 +149,7 @@
    "source": [
     "kwargs_generator = {\"input_size\"         : gen_data.n_characters,\n",
     "                    \"output_size\"        : gen_data.n_characters,\n",
-    "                    \"max_seqlen\"         : 156,\n",
+    "                    \"max_seqlen\"         : 44,\n",
     "                    \"hidden_size\"        : 256,\n",
     "                    \"latent_size\"        : 64,\n",
     "                    \"n_layers\"           : 4,\n",
@@ -280,7 +263,7 @@
     "    for i in trange(n_to_generate):\n",
     "        sel = generator.evaluate(gen_data)\n",
     "        sel = sel.replace(gen_data.start_token, \"\").replace(gen_data.end_token, \"\")\n",
-    "        smi = normalize_SMILES(sf.decoder(sel))\n",
+    "        smi = sf.decoder(sel)\n",
     "        generated.append(smi)\n",
     "    return generated"
    ]
