--- a/TASK4/3_checkpoints.ipynb
+++ b/TASK4/3_checkpoints.ipynb
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e8b8261",
+   "id": "b475d023",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2e77489",
+   "id": "a1d4b1a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8b81936",
+   "id": "fd32051e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1367bc5e",
+   "id": "a27ce90b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "859990dc",
+   "id": "d9037504",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6ced11b",
+   "id": "317e330e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,18 +101,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b82e3d2",
+   "id": "c9d224af",
    "metadata": {},
    "outputs": [],
    "source": [
     "class DATACONFIGS:\n",
     "    def __init__(self):\n",
     "        ## input\n",
-    "        self.input_dir = os.path.join('processed_data', 'zinc15')\n",
+    "        self.input_dir = 'outputs_0_preprocess_data'\n",
     "        self.train_data_path = os.path.join(self.input_dir, 'fragments_list.pkl')\n",
     "        self.vocab_data_path = os.path.join(self.input_dir, 'vocabulary.csv')\n",
     "        ## output\n",
-    "        self.output_dir = os.path.join('outputs_3_checkpoints', 'zinc15')\n",
+    "        self.output_dir = 'outputs_3_checkpoints'\n",
     "        assert os.path.exists(self.output_dir)\n",
     "\n",
     "dataconfigs = DATACONFIGS()"
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2da5364",
+   "id": "edcfa26a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1358e2a6",
+   "id": "52e68a9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,13 +147,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8533c798",
+   "id": "1ded2867",
    "metadata": {},
    "outputs": [],
    "source": [
     "kwargs_generator = {\"input_size\"         : gen_data.n_characters,\n",
     "                    \"output_size\"        : gen_data.n_characters,\n",
-    "                    \"max_seqlen\"         : 156,\n",
+    "                    \"max_seqlen\"         : 44,\n",
     "                    \"hidden_size\"        : 256,\n",
     "                    \"latent_size\"        : 64,\n",
     "                    \"n_layers\"           : 4,\n",
@@ -171,15 +171,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2120ee7",
+   "id": "81a245c6",
    "metadata": {},
    "outputs": [],
    "source": [
     "class CKPTCONFIGS:\n",
     "    def __init__(self):\n",
-    "        self.input_dir = 'outputs_2_optimize_ReBADD'\n",
-    "        self.modelnames = ['zinc15']\n",
-    "        self.numbers = ['0050', '0100', '0150', '0200', '0250', '0300', '0350', '0400', '0450', '0500']\n",
+    "        self.input_dir = 'outputs_2_optimize'\n",
+    "        #self.numbers = ['0050', '0100', '0150', '0200', '0250', '0300', '0350', '0400', '0450', '0500']\n",
+    "        self.numbers = ['0010', '0020']\n",
     "        \n",
     "ckptconfigs = CKPTCONFIGS()"
    ]
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b7c7cb4",
+   "id": "73edc6f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dde5eb29",
+   "id": "7b8a7ac5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,21 +283,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb8ab13d",
+   "id": "0a6ed14f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for modelname in ckptconfigs.modelnames:\n",
-    "    for num in ckptconfigs.numbers:\n",
-    "        \n",
-    "        filepath = os.path.join(ckptconfigs.input_dir, modelname, f'checkpoint.pth.{num}')\n",
-    "        generator.load_model(filepath)\n",
-    "        \n",
-    "        generated = SMILES_generate(gen_data, generator, reward_ft, sample_size=n_sampling)\n",
-    "        \n",
-    "        save_smiles(os.path.join(dataconfigs.output_dir, f'smi_after.csv.{num}'), generated)\n",
-    "        "
+    "for num in ckptconfigs.numbers:\n",
+    "    ## laod a checkpoint\n",
+    "    filepath = os.path.join(ckptconfigs.input_dir, f'checkpoint.pth.{num}')\n",
+    "    generator.load_model(filepath)\n",
+    "\n",
+    "    ## SMILES sampling\n",
+    "    generated = SMILES_generate(gen_data, generator, reward_ft, sample_size=n_sampling)\n",
+    "\n",
+    "    ## save\n",
+    "    save_smiles(os.path.join(dataconfigs.output_dir, f'smi_after.csv.{num}'), generated)\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05e8b594",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
