--- a/TASK4/4_calculate_properties.ipynb
+++ b/TASK4/4_calculate_properties.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97d4c482",
+   "id": "1d313088",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,18 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40120d46",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e833d05",
+   "id": "b50f3b0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34bf9fb0",
+   "id": "f06a0d84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21dbd8cd",
+   "id": "58efad61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "556a4e0f",
+   "id": "613ef15f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,13 +71,14 @@
     "    sys.path = [REBADD_LIB_PATH] + sys.path\n",
     "\n",
     "from rebadd.bindutils import BAScorerBCL2, BAScorerBCLXL, BAScorerBCLW\n",
-    "from rebadd.chemutils import SAScorer, RAScorer, calc_chem_properties # smi -> (mw, clogp, tpsa, qed)"
+    "from rebadd.chemutils import SAScorer, RAScorer\n",
+    "from rebadd.chemutils import calc_chem_properties # smi -> (mw, clogp, tpsa, qed)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3eb1f9e",
+   "id": "a698df8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "933785a5",
+   "id": "4daafa6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9686beb7",
+   "id": "c4155303",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,19 +140,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f4147fb",
+   "id": "9da95a1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "class CKPTCONFIGS:\n",
     "    def __init__(self):\n",
     "        \n",
-    "        self.input_dir = 'outputs_3_checkpoints'\n",
-    "        \n",
-    "        self.modelnames = [\n",
-    "            'zinc15',\n",
-    "        ]\n",
-    "                \n",
+    "        self.input_dir = 'outputs_3_checkpoints'                \n",
     "        self.filenames = [f'smi_after.csv.{num:04d}' for num in range(50,550,50)]\n",
     "        \n",
     "ckptconfigs = CKPTCONFIGS()"
@@ -171,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a99b3d66",
+   "id": "dee02b82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,40 +172,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a4d0910",
+   "id": "c5d20412",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for modelname in ckptconfigs.modelnames:\n",
+    "for filename in ckptconfigs.filenames:\n",
     "    \n",
-    "    input_dir = os.path.join(ckptconfigs.input_dir, modelname)\n",
-    "    output_dir = os.path.join(outputconfigs.output_dir, modelname)\n",
-    "    if not os.path.exists(output_dir):\n",
-    "        os.mkdir(output_dir)\n",
+    "    filepath = os.path.join(ckptconfigs.input_dir, filename)\n",
     "    \n",
-    "    for filename in ckptconfigs.filenames:\n",
+    "    df = pd.read_csv(filepath, header=None, skip_blank_lines=True)\n",
+    "    gen_smiles = df.iloc[:,0].values.tolist()\n",
+    "    \n",
+    "    print(len(gen_smiles))\n",
+    "    \n",
+    "    data = []\n",
+    "    for smi in tqdm.tqdm(gen_smiles):\n",
+    "        data.append(calc_properties(smi))\n",
     "        \n",
-    "        filepath = os.path.join(input_dir, filename)\n",
-    "        \n",
-    "        df = pd.read_csv(filepath, header=None, skip_blank_lines=True)\n",
-    "        gen_smiles = df.iloc[:,0].values.tolist()\n",
-    "        \n",
-    "        print(len(gen_smiles))\n",
-    "        \n",
-    "        data = []\n",
-    "        for smi in tqdm.tqdm(gen_smiles):\n",
-    "            data.append(calc_properties(smi))\n",
-    "            \n",
-    "        df = pd.DataFrame(data)\n",
-    "        \n",
-    "        output_filepath = os.path.join(output_dir, filename)\n",
-    "        df.to_csv(output_filepath, index=False)"
+    "    df = pd.DataFrame(data)\n",
+    "    \n",
+    "    output_filepath = os.path.join(outputconfigs.output_dir, filename)\n",
+    "    df.to_csv(output_filepath, index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3fd6203",
+   "id": "66503fd6",
    "metadata": {},
    "outputs": [],
    "source": []
