--- a/TASK4/5_evaluate_checkpoints.ipynb
+++ b/TASK4/5_evaluate_checkpoints.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cf00ead",
+   "id": "2d295572",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2f02c96",
+   "id": "50f2d8b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fa8b185",
+   "id": "05114561",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,47 +46,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a34e843f",
+   "id": "12885dfa",
    "metadata": {},
    "outputs": [],
    "source": [
     "input_dir = 'outputs_4_calculate_properties'\n",
-    "\n",
-    "modelnames = [\n",
-    "    'zinc15',\n",
-    "]\n",
-    "\n",
     "filenames = [f'smi_after.csv.{num:04d}' for num in range(50,550,50)]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "603dc4fd",
+   "id": "184c7571",
    "metadata": {},
    "outputs": [],
    "source": [
     "frames = []\n",
-    "\n",
-    "for modelname in modelnames:\n",
     "    \n",
-    "    for filename in filenames:\n",
-    "        \n",
-    "        filepath = os.path.join(input_dir, modelname, filename)\n",
-    "        \n",
-    "        df = pd.read_csv(filepath)\n",
-    "        \n",
-    "        df = df.loc[:,('smiles', 'bcl2', 'bclxl', 'bclw')]\n",
-    "        df.loc[:,'model'] = modelname\n",
-    "        df.loc[:,'checkpoint'] = filename.split('.')[-1]\n",
-    "        \n",
-    "        frames.append(df)"
+    "for filename in filenames:\n",
+    "    \n",
+    "    filepath = os.path.join(input_dir, filename)\n",
+    "    df = pd.read_csv(filepath)\n",
+    "    \n",
+    "    df = df.loc[:,('smiles', 'bcl2', 'bclxl', 'bclw')]\n",
+    "    df.loc[:,'model'] = 'ReBADD-SE'\n",
+    "    df.loc[:,'checkpoint'] = filename.split('.')[-1]\n",
+    "    \n",
+    "    frames.append(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55063e21",
+   "id": "1551905f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f14fdab",
+   "id": "ae0d87ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ec0b337",
+   "id": "c564a921",
    "metadata": {},
    "outputs": [],
    "source": []
