--- a/TASK4/2_optimize.ipynb
+++ b/TASK4/2_optimize.ipynb
@@ -19,25 +19,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "76799c27",
-   "metadata": {},
-   "source": [
-    "파이썬 코드를 실행하기 전에 항상 모든 모듈을 reload 하도록 강제 설정"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60882b44",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "297e7a9b",
@@ -131,11 +112,11 @@
     "class DATACONFIGS:\n",
     "    def __init__(self):\n",
     "        ## input\n",
-    "        self.input_dir = os.path.join('processed_data', 'zinc15')\n",
+    "        self.input_dir = 'outputs_0_preprocess_data'\n",
     "        self.train_data_path = os.path.join(self.input_dir, 'fragments_list.pkl')\n",
     "        self.vocab_data_path = os.path.join(self.input_dir, 'vocabulary.csv')\n",
     "        ## output\n",
-    "        self.output_dir = os.path.join('outputs_2_optimize_ReBADD', 'zinc15')\n",
+    "        self.output_dir = 'outputs_2_optimize'\n",
     "        assert os.path.exists(self.output_dir)\n",
     "\n",
     "dataconfigs = DATACONFIGS()"
@@ -174,7 +155,7 @@
    "source": [
     "kwargs_generator = {\"input_size\"         : gen_data.n_characters,\n",
     "                    \"output_size\"        : gen_data.n_characters,\n",
-    "                    \"max_seqlen\"         : 156,\n",
+    "                    \"max_seqlen\"         : 44,\n",
     "                    \"hidden_size\"        : 256,\n",
     "                    \"latent_size\"        : 64,\n",
     "                    \"n_layers\"           : 4,\n",
@@ -194,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_generator_after  = StackAugmentedVAE(**kwargs_generator)"
+    "my_generator_after = StackAugmentedVAE(**kwargs_generator)"
    ]
   },
   {
@@ -206,7 +187,7 @@
    "source": [
     "class CKPTCONFIGS:\n",
     "    def __init__(self):\n",
-    "        self.model_path = os.path.join('outputs_1_pretraining_ReBADD', 'zinc15', 'checkpoint.pth')\n",
+    "        self.model_path = os.path.join('outputs_1_pretraining', 'checkpoint.pth')\n",
     "        \n",
     "ckptconfigs = CKPTCONFIGS()"
    ]
@@ -378,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d84cb9b6-fd44-454f-88ef-48aef2f90898",
+   "id": "3c3d911e-0f06-4df6-ad02-b02e9a9f0129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +378,7 @@
     "start_time = time.time()\n",
     "\n",
     "alpha_min = 0.01\n",
-    "alpha_max = 0.05\n",
+    "alpha_max = 0.1\n",
     "alpha_inc = (alpha_max - alpha_min) / n_iterations\n",
     "alpha = alpha_min\n",
     "for i in range(1, n_iterations+1):\n",
@@ -406,18 +387,14 @@
     "    cur_reward, cur_loss, cur_reconst, cur_entropy = ReBADD.policy_gradient(n_batch=8, grad_clipping=1., alpha=alpha)\n",
     "    \n",
     "    ## append - reward\n",
-    "    #reward = simple_moving_average(tr_rewards, cur_reward)\n",
     "    reward = cur_reward\n",
     "    tr_rewards.append(reward)\n",
     "    \n",
     "    ## append - loss\n",
-    "    #rl_loss = simple_moving_average(rl_losses, cur_loss)\n",
     "    rl_loss = cur_loss\n",
     "    rl_losses.append(rl_loss)\n",
-    "    #reconst_loss = simple_moving_average(reconst_losses, cur_reconst)\n",
     "    reconst_loss = cur_reconst\n",
     "    reconst_losses.append(reconst_loss)\n",
-    "    #entropy_loss = simple_moving_average(entropy_losses, cur_entropy)\n",
     "    entropy_loss = cur_entropy\n",
     "    entropy_losses.append(entropy_loss)\n",
     "        \n",
