--- a/TASK7/1_generate_molecules+frag.ipynb
+++ b/TASK7/1_generate_molecules+frag.ipynb
@@ -2,28 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "96213a21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: CUDA_VISIBLE_DEVICES=0\n"
+     ]
+    }
+   ],
    "source": [
     "%env CUDA_VISIBLE_DEVICES=0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b475d023",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a1d4b1a2",
    "metadata": {},
    "outputs": [],
@@ -43,10 +40,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fd32051e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Inter-op parallelism\n",
     "torch.set_num_interop_threads(4)\n",
@@ -58,10 +66,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a27ce90b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "class GPUCONFIGS:\n",
     "    def __init__(self):\n",
@@ -75,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d9037504",
    "metadata": {},
    "outputs": [],
@@ -90,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c9d224af",
    "metadata": {},
    "outputs": [],
@@ -98,11 +114,11 @@
     "class DATACONFIGS:\n",
     "    def __init__(self):\n",
     "        ## input\n",
-    "        self.input_dir = os.path.join('processed_data', 'zinc15+frag')\n",
+    "        self.input_dir = os.path.join(os.pardir, 'TASK3', 'outputs_0_preprocess_data')\n",
     "        self.train_data_path = os.path.join(self.input_dir, 'fragments_list.pkl')\n",
     "        self.vocab_data_path = os.path.join(self.input_dir, 'vocabulary.csv')\n",
     "        ## output\n",
-    "        self.output_dir = os.path.join('outputs_2_generate_molecules', 'zinc15+frag')\n",
+    "        self.output_dir = 'outputs_1_generate_molecules+frag'\n",
     "        assert os.path.exists(self.output_dir)\n",
     "\n",
     "dataconfigs = DATACONFIGS()"
@@ -110,10 +126,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "edcfa26a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training samples: 6291\n",
+      "Number of vocabulary: 7496\n",
+      "Maximum of seqlen: 38\n"
+     ]
+    }
+   ],
    "source": [
     "gen_data = GeneratorData(pickle_data_path=dataconfigs.train_data_path,\n",
     "                         vocabulary_path=dataconfigs.vocab_data_path,\n",
@@ -126,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "1ded2867",
    "metadata": {},
    "outputs": [],
@@ -150,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "81a245c6",
    "metadata": {},
    "outputs": [],
@@ -160,15 +186,14 @@
     "        ################################################\n",
     "        ## Get a pretrained model from the TASK3\n",
     "        ################################################\n",
-    "        self.input_dir = 'outputs_1_pretraining_ReBADD'\n",
-    "        self.modelnames = ['zinc15+frag']\n",
+    "        self.input_dir = os.path.join(os.pardir, 'TASK3', 'outputs_1_pretraining')\n",
     "        \n",
     "ckptconfigs = CKPTCONFIGS()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "73edc6f6",
    "metadata": {},
    "outputs": [],
@@ -198,38 +223,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7b8a7ac5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_sampling = 5000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0a6ed14f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for modelname in ckptconfigs.modelnames:\n",
-    "\n",
-    "    filepath = os.path.join(ckptconfigs.input_dir, modelname, 'checkpoint.pth')\n",
-    "    generator.load_model(filepath)\n",
-    "\n",
-    "    generated = SELFIES_generate(gen_data, generator, sample_size=n_sampling)\n",
-    "    save_SELFIES(os.path.join(dataconfigs.output_dir, f'smi_after.csv'), generated)\n",
-    "        "
+    "filepath = os.path.join(ckptconfigs.input_dir, 'checkpoint.pth')\n",
+    "generator.load_model(filepath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "05e8b594",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 5000/5000 [00:11<00:00, 446.30it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_sampling = 5000\n",
+    "generated = SELFIES_generate(gen_data, generator, sample_size=n_sampling)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9f72b232-1979-43e7-aa38-986f282c6bdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] 5000 SELFIES were saved in outputs_1_generate_molecules+frag/smi_after.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_SELFIES(os.path.join(dataconfigs.output_dir, f'smi_after.csv'), generated)"
+   ]
   }
  ],
  "metadata": {
